--- a/step.ioc
+++ b/step.ioc
@@ -108,8 +108,12 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true
@@ -472,7 +476,8 @@ SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
 SH.S_TIM9_CH2.ConfNb=1
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Period
+TIM1.Period=23999
 TIM10.Channel=TIM_CHANNEL_1
 TIM10.IPParameters=Channel,Prescaler,Period
 TIM10.Period=999
@@ -499,13 +504,16 @@ TIM14.Prescaler=83
 TIM14.Pulse=500
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Period
+TIM2.Period=23999
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Period
+TIM3.Period=23999
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Period
+TIM4.Period=23999
 TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM9.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM9.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
