--- a/step.ioc
+++ b/step.ioc
@@ -117,6 +117,7 @@ NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true
+NVIC.UART5_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ENC1A
